--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div style="width: 48px;"></div> 
 
                 <!-- Title -->
-                <h5 class="mb-0 mx-auto" id="active-chat-user">APIRTC Chat Prototype</h5>
+                <h5 class="mb-0 mx-auto" id="active-chat-user">APIRTC Chat Room</h5>
 
                 <!-- Call Icons (right-aligned) -->
                 <div class="call-icons d-flex align-items-center">
